--- a/GSBVisiteurs/src/vue/V_RapportDeVisite.form
+++ b/GSBVisiteurs/src/vue/V_RapportDeVisite.form
@@ -75,9 +75,13 @@
                               <Component id="cbPraticien" alignment="0" max="32767" attributes="0"/>
                               <Component id="cbRapport" alignment="0" pref="371" max="32767" attributes="0"/>
                           </Group>
-                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="cbVisiteur" alignment="0" max="32767" attributes="0"/>
-                              <Component id="txtDateRapport" alignment="0" pref="371" max="32767" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Component id="cbVisiteur" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtDateRapport" alignment="0" pref="371" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -110,6 +114,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lbDateRapport" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtDateRapport" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -334,6 +339,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAjouterEchActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel2">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="format : dd/mm/aaaa"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
